discussion/kv_engine/147739/147739_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44168: Handle disk-write failures at DB bootstrap

Change-Id: Iba04a2fe4656ebdf0e9b52515bf986591286dd07

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-03-08 15:59:31.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-08 16:11:15.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7495/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43: error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL" [clang-diagnostic-error]
            COUCHSTORE_OPEN_FLAG_CREATE | COUCHSTORE_OPEN_FLAG_EXCL,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7495/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7495/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34094/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(4223): error C2065: "COUCHSTORE_OPEN_FLAG_EXCL": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34094/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29287/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29287/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9109/ : FAILURE

Compile error at [2021-03-08T16:10:12.108Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: ?COUCHSTORE_OPEN_FLAG_EXCL? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9109/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8167/ : FAILURE

Compile error at [2021-03-08T16:09:23.716Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8167/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9464/ : FAILURE

Compile error at [2021-03-08T16:06:35.453Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9464/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9251/ : FAILURE

Compile error at [2021-03-08T16:04:20.822Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: ?COUCHSTORE_OPEN_FLAG_EXCL? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9251/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17011/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6033/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-03-08 16:32:49.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
